# data-visualization

./: artists.csv  pyproject.toml  top500.csv  viz-a.ipynb  viz-b.ipynb
